# Audio_Visual_Fusion

./: .gitignore  CMakeLists.txt  README.md
Mem_Sys/: README.md
Mem_Sys/docs/: memory_service.md
Mem_Sys/scripts/: memory_service.py  start_memory_lab.sh
Mem_Sys/tests/: test_memory_service.py
Mem_Sys/ui/: memory.html  memory_app.js  memory_styles.css
configs/: live_mac.yaml  orin_nx.yaml
include/speaker_id/api/: asr.hpp  diarization.hpp  vad.hpp  vision.hpp
include/speaker_id/capture/: libav_video_capture.hpp
include/speaker_id/core/: audio_clock.hpp  config.hpp  gateway_server.hpp  llm_turn_gate.hpp  module.hpp  pipeline.hpp  types.hpp  websocket_server.hpp
include/speaker_id/modules/: asd.hpp  asr.hpp  diarization.hpp  face.hpp  fusion.hpp  kalman_tracker.hpp  vad.hpp  vision.hpp
scripts/: download_models.py
src/: config.cpp  fusion_events.cpp  kalman_tracker.cpp  main.cpp  pipeline.cpp  vad.cpp  vision.cpp
src/capture/: libav_video_capture.cpp
src/gateway/: gateway_server.cpp  websocket_server.cpp
src/modules/: asd.cpp  asr.cpp  diarization.cpp  face.cpp
tests/: core_tests.cpp
ui/: README.md  app.js  index.html  styles.css
